--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-infinite-scroll": "^6.0.0",
     "ngx-lightbox": "^1.1.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
